<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.meubolso.app.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="#F2F2F2"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titulo_login"
                    style="@style/TextDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:text="@string/meu_bolso"
                    android:textSize="46sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logo_login"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginBottom="-30dp"
                    android:contentDescription="@string/image_descrip"
                    android:src="@drawable/ic_mobile_testing"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <TextView
            style="@style/TextDefault"
            android:id="@+id/description_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/descricao_login"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/card_login"
            app:layout_constraintStart_toStartOf="@id/card_login"
            app:layout_constraintTop_toBottomOf="@id/card_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cadastrar_login"
            style="@style/PrimaryButtonGhostMidRounded"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_login"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entrar_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/entrar"
            style="@style/SecondaryButtonOutlineMidRounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cadastrar_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>