<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.meubolso.app.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titulo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/enso"
            android:text="@string/meu_bolso"
            android:textSize="46sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_mobile_testing"
            app:layout_constraintTop_toBottomOf="@id/titulo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="imagem titulo meu bolso" />

        <TextView
            android:id="@+id/description_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/enso"
            android:text="Organize suas finanças como desejar"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/logo_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cadastrar_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#6C63FF"
            android:text="@string/cadastrar"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            app:strokeColor="#000000"
            app:strokeWidth="1dp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_login" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/entrar_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FFFFFF"
            android:textColor="#000000"
            android:text="@string/entrar"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"
            app:strokeColor="#000000"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cadastrar_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>