<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.cadastro.LoginCadastroFragment">

    <data>

        <variable
            name="viewModel"
            type="com.meubolso.app.ui.cadastro.LoginCadastroViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_login_cadastro"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="85dp"
            android:contentDescription="@string/image_descrip"
            android:src="@drawable/ic_mobile_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/card_login_cadastro"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:backgroundTint="#F2F2F2"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titulo_login_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/enso"
                    android:text="@string/entrar"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="48dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="#939292"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titulo_login_cadastro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={viewModel.emailInput}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="48dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="#939292"
                    app:boxBackgroundColor="@color/white"
                    app:endIconDrawable="@drawable/ic_eye"
                    app:endIconTint="#6C63FF"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_usuario_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viewModel.passwordInput}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cadastrar_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="48dp"
                    android:backgroundTint="#6C63FF"
                    android:text="@string/cadastrar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"
                    android:insetLeft="0dp"
                    android:insetRight="0dp"
                    app:cornerRadius="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_usuario_password"
                    app:strokeColor="#000000"
                    app:strokeWidth="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>