<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.cadastro.CadastroFragment">

    <data>

        <variable
            name="viewModel"
            type="com.meubolso.app.ui.cadastro.CadastroViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_login_cadastrar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="85dp"
            android:src="@drawable/ic_mobile_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/descricao_login" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/card_cadastrar"
            style="@style/PrimaryCard"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_constraint_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_cadastrar"
                    style="@style/TextDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/cadastrar"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_nome"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="48dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="#939292"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_cadastrar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_usuario_nome_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome_completo"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="@{viewModel.nomeCompletoInput}"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_numero"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="48dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="#939292"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_usuario_nome">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_usuario_numero_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@{viewModel.numeroInput}"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_email"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="48dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="#939292"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_usuario_numero">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_usuario_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@{viewModel.emailInput}"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_usuario_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="48dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeWidth="0dp"
                    app:endIconDrawable="@drawable/ic_eye"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/primary"
                    app:hintTextColor="#939292"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_usuario_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_usuario_senha_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@{viewModel.senhaInput}"
                        android:textAlignment="textStart"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cadastrar"
                    style="@style/PrimaryButtonGhostMidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="48dp"
                    android:text="@string/cadastrar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_usuario_senha" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_footer_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:layout_constraintEnd_toEndOf="@id/btn_cadastrar"
                    app:layout_constraintStart_toStartOf="@id/btn_cadastrar"
                    app:layout_constraintTop_toBottomOf="@id/btn_cadastrar">

                    <TextView
                        android:id="@+id/text_sou_membro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/enso"
                        android:text="@string/ja_sou_membro"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@id/btn_entrar_membro"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_entrar_membro"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:backgroundTint="@color/card_background_primary"
                        android:elevation="0dp"
                        android:fontFamily="@font/enso"
                        android:insetLeft="5dp"
                        android:insetTop="5dp"
                        android:insetRight="5dp"
                        android:insetBottom="5dp"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        android:text="@string/entrar"
                        android:textAllCaps="false"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        app:cornerRadius="0dp"
                        app:layout_constraintBottom_toBottomOf="@id/text_sou_membro"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/text_sou_membro"
                        app:layout_constraintTop_toTopOf="@id/text_sou_membro"
                        tools:ignore="TouchTargetSizeCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>